--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="page-wrapper">
     <header>
-        <div class="brand animate"><a href=""><img src="" alt=""></a></div>
+        <div class="brand animate"><a href=""><img src="" alt="Stop Salon Academy"></a></div>
         <nav>
             
             <!--end navigation-->
