--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="content-wrapper">
         <div class="content-main animate">
             <div class="container">
+                <h1 class="font-size-90">Stop Salon Academy</h1>
                 <div class="center count-down animate" data-countdown-year="2021" data-countdown-month="11" data-countdown-day="10"></div>
                 <h1 class="font-size-90">Get Ready!</h1>
                 <h2 class="opacity-60">Something Awesome is Coming Soon</h2>
