--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="page-wrapper">
     <header>
-        <div class="brand animate"><a href="/assets/img/a.png" alt=""</a></div>
+        <div class="brand animate"><a href="assets/img/a.png" alt=""</a></div>
         <nav>
             
             <!--end navigation-->
@@ -37,7 +37,8 @@
                 <h1 class="font-size-60">Stop Salon Academy</h1>
                 <div class="center count-down animate" data-countdown-year="2021" data-countdown-month="11" data-countdown-day="10"></div>
                 <h1 class="font-size-60">Get Ready!</h1>
-                <h2 class="opacity-40">Something Awesome is Coming Soon</h2>
+                 <h1 class="font-size-40">We Are Launching in Hisar in Coming Days in Trimandous Manner</h1>
+                <h2 class="opacity-30">Something Awesome is Coming Soon</h2>
             </div>
             <!--end container-->
         </div>
