--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1 class="font-size-50">Stop Salon Academy</h1>
                 <div class="center count-down animate" data-countdown-year="2021" data-countdown-month="11" data-countdown-day="10"></div>
                 <h1 class="font-size-40">Get Ready!</h1>
-                 <h1 class="opacity-30">We Are Launching in Hisar in Coming Days in Trimandous Manner</h1>
+                 <h1 class="font-size-30">We Are Launching in Hisar in Coming Days in Trimandous Manner</h1>
                 <h2 class="opacity-20">Something Awesome is Coming Soon</h2>
             </div>
             <!--end container-->
