--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 
 <html lang="en-US">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="ThemeStarz">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/a.png"/>
 
     <link href="assets/fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="assets/fonts/elegant-fonts.css" rel="stylesheet" type="text/css">
