--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+    
+    <img src="assets/img/a.png" alt="" width="500" height="600">
 
 <div class="page-wrapper">
     <header>
