--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <div class="page-wrapper">
     <header>
-        <link rel="shortcut icon" type="image/x-icon" href="assets/img/a.png"/>
-        <div class="brand animate"><a href="assets/img/a.png" alt=""</a></div>
+        
+        <div class="brand animate"><a href="assets/img/logo.png" alt=""</a></div>
         <nav>
             
             <!--end navigation-->
