--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="page-wrapper">
     <header>
         
-        <div class="brand animate"><a href="assets/img/logo.png" alt=""</a></div>
+        <div class="brand animate"><a href="assets/img/a.png" alt=""></a></div>
         <nav>
             
             <!--end navigation-->
