--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <img src="assets/img/logo.png" alt="logo" />
+    <img src="assets/img/a.png" alt="logo" />
 
 <div class="page-wrapper">
     <header>
