--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1 class="font-size-40">Get Ready!</h1>
                 
                 <h2 class="opacity-20">Something Awesome is Coming Soon</h2>
-                <img src="assets/img/aaa.jpg" alt="Girl in a jacket" width="500" height="600">
+                <img src="assets/img/aaa.jpg" alt="">
 
             </div>
             <!--end container-->
