--- a/new.html
+++ b/new.html
@@ -288,7 +288,7 @@ class="hfeed site" id="page">
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fas fa-check-circle"></i>						</span>
-										<span class="elementor-icon-list-text">Vocubulary <b></b></span>
+										<span class="elementor-icon-list-text">Vocabulary <b></b></span>
 									</li>
 						</ul>
 				</div>
@@ -334,7 +334,7 @@ class="hfeed site" id="page">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="icon icon-double-angle-pointing-to-right"></i>			</span>
-						<span class="elementor-button-text">8 Tips for Score 8 Bands</span>
+						<span class="elementor-button-text">8 Tips to Score 8 Bands</span>
 		</span>
 					</a>
 		</div>
@@ -423,7 +423,7 @@ class="hfeed site" id="page">
 				<div class="elementor-element elementor-element-71f58be4 elementor-widget elementor-widget-text-editor" data-id="71f58be4" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>It should be Using a <b><span style="color: #ee5a24;">Secret &amp; Easy  methods.....</span></b>Crack <b>IELTS with PrepLive Global Workshop&#8230;</b></p>					</div>
+				<p>It should be Using <b><span style="color: #ee5a24;">Secret &amp; Easy  methods.....</span></b>Crack <b>IELTS with PrepLive Global Workshop&#8230;</b></p>					</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-18c84096 elementor-widget elementor-widget-text-editor" data-id="18c84096" data-element_type="widget" data-widget_type="text-editor.default">
@@ -717,7 +717,7 @@ class="hfeed site" id="page">
                 </div><div class="eael-accordion-list">
                 <div id="case-studies" class="elementor-tab-title eael-accordion-header" tabindex="1582" data-tab="2" role="tab" aria-controls="elementor-tab-content-1582"><i aria-hidden="true" class="fa-accordion-icon fas fa-chart-line"></i><span class="eael-accordion-tab-title">Score Boosting</span><i aria-hidden="true" class="fa-toggle fas fa-arrow-alt-circle-right"></i></div>
                 </div><div class="eael-accordion-list">
-                <div id="final-verdict" class="elementor-tab-title eael-accordion-header" tabindex="1583" data-tab="3" role="tab" aria-controls="elementor-tab-content-1583"><i aria-hidden="true" class="fa-accordion-icon fas fa-hammer"></i><span class="eael-accordion-tab-title">Flowless Writing</span><i aria-hidden="true" class="fa-toggle fas fa-arrow-alt-circle-right"></i></div>
+                <div id="final-verdict" class="elementor-tab-title eael-accordion-header" tabindex="1583" data-tab="3" role="tab" aria-controls="elementor-tab-content-1583"><i aria-hidden="true" class="fa-accordion-icon fas fa-hammer"></i><span class="eael-accordion-tab-title">Flawless Writing</span><i aria-hidden="true" class="fa-toggle fas fa-arrow-alt-circle-right"></i></div>
                 </div></div>		</div>
 				</div>
 						</div>
@@ -750,7 +750,7 @@ class="hfeed site" id="page">
 						<div class="elementor-element elementor-element-7786f90b elementor-widget elementor-widget-text-editor" data-id="7786f90b" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>&#8220;I have been doing this for quite some time now &amp; just by following a specific Easy-To-Do &amp; Step-By-Step process, For Crack IELTS Exam</p>					</div>
+				<p>&#8220;I have been doing this for quite some time now &amp; just by following a specific Easy-To-Do &amp; Step-By-Step process, To Crack IELTS Exam</p>					</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-2b770416 elementor-widget elementor-widget-text-editor" data-id="2b770416" data-element_type="widget" data-widget_type="text-editor.default">
@@ -884,7 +884,7 @@ class="hfeed site" id="page">
 						<div class="elementor-element elementor-element-16e08f11 elementor-widget elementor-widget-text-editor" data-id="16e08f11" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>What I Will Teach You In This <strong>180 Minutes LIVE Workshop</strong> Will Not Just <strong><span style="background: #FFC312;">Increase Your Conversions</span></strong>, But Also Help You <strong>SAVE</strong> INR 10,000+ Every Single Month. That&#8217;s a <strong><span style="background: #FFC312;">Minimum Savings Of INR 1,20,000 Per Year!!</span></strong></p>					</div>
+				<p>What I Will Teach You In This <strong>180 Minutes LIVE Workshop</strong> Will Not Just <strong><span style="background: #FFC312;">Increase Your Score</span></strong>, But Also Help You <strong>SAVE</strong> INR 10,000+ Every Single Month. That&#8217;s a <strong><span style="background: #FFC312;">Minimum Savings Of INR 1,20,000 Per Year!!</span></strong></p>					</div>
 						</div>
 				</div>
 						</div>
@@ -913,13 +913,13 @@ class="hfeed site" id="page">
 				<div class="elementor-element elementor-element-310016da elementor-widget elementor-widget-text-editor" data-id="310016da" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>Learn How You Can Learn a <strong><u>10x Faster IELTS Preparation</u></strong> From Scratch&#8230;On <strong><u>This Workshop 100% Result</u></strong>&#8230;Without Paying For Any Expensive Institutes!!</p>					</div>
+								</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-11adcb9 elementor-widget elementor-widget-text-editor" data-id="11adcb9" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>And Tell Me, Can It Be any Better than Paying Me <strong>AFTER</strong> You Attend &amp; Only If You Like.</p>					</div>
+									</div>
 						</div>
 				</div>
 						</div>
