--- a/new.html
+++ b/new.html
@@ -2,7 +2,6 @@
 <html lang="en-GB">
 <head>
 
-
 <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -175,6 +174,7 @@ class="hfeed site" id="page">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
 	<path class="elementor-shape-fill" d="M500.2,94.7L0,0v100h1000V0L500.2,94.7z"/>
 </svg>		</div>
+<div class="loader">Loading...</div>
 					<div class="elementor-container elementor-column-gap-default">
 							<div class="elementor-row">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-12856f85" data-id="12856f85" data-element_type="column">
@@ -215,7 +215,7 @@ class="hfeed site" id="page">
 						<div class="elementor-element elementor-element-200407e2 elementor-aspect-ratio-169 elementor-widget elementor-widget-video" data-id="200407e2" data-element_type="widget" data-settings="{&quot;video_type&quot;:&quot;vimeo&quot;,&quot;autoplay&quot;:&quot;yes&quot;,&quot;play_on_mobile&quot;:&quot;yes&quot;,&quot;aspect_ratio&quot;:&quot;169&quot;}" data-widget_type="video.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-wrapper elementor-fit-aspect-ratio elementor-open-inline">
-			<script src="https://fast.wistia.com/embed/medias/9k3fe34huq.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_9k3fe34huq videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/9k3fe34huq/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>		</div>
+			<script src="https://fast.wistia.com/embed/medias/ipmkmqkcn6.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_ipmkmqkcn6 videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/ipmkmqkcn6/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>		</div>
 				</div>
 				</div>
 						</div>
@@ -518,7 +518,7 @@ class="hfeed site" id="page">
 							<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="fas fa-check-circle"></i>						</span>
-										<span class="elementor-icon-list-text"><b><u>27TH Nov</u> (Sun):</b> <b>6 PM To 9 PM</b> <span style="color:green"><b>(BOOKING OPEN)</b></span></span>
+										<span class="elementor-icon-list-text"><b><u>27TH Nov</u> (Sun):</b> <b>6 PM To 9 PM</b> <span style="color:green"><b>(BOOKING OPEN) Only 53 Seats left</b></span></span>
 									</li>
 						</ul>
 				</div>
